fix some references

--- a/10 SDN/SDN and nothing else.tex
+++ b/10 SDN/SDN and nothing else.tex
@@ -5,7 +5,7 @@
 \begin{document}
 \part{SDN Introduction}
     \section{Exercise One}
-    Remember one of the previous labs\footnote{Lab 4: routing} where you are using host rather than router to emulate some routing functionality. In this experiment we want to implement same functionality with SDN switches. To warm up our hands we will start by simple scenario:
+    Remember one of the previous labs\footnote{Lab 4: Routing} where you are using host rather than router to emulate some routing functionality. In this experiment we want to implement same functionality with SDN switches. To warm up our hands we will start by simple scenario:
 
     \begin{itemize}
         \item Open \path{switch.py} and read it's codes carefully.
@@ -20,7 +20,7 @@
     \end{report}
 
     \section{Exercise Two}
-    Use what you learned in previous exercise and create figure \ref{fig:linearRouters} topology. Configure switches in this topology where ??? we can ping each host from each host. Show your final result to instructors.
+    Use what you learned in previous exercise and create \autoref{fig:linearRouters} topology. Configure switches in this topology where ??? we can ping each host from each host. Show your final result to instructors.
 
     \begin{figure}[H]
         \centering
