--- a/6 TCP study/TCP and its applications.tex
+++ b/6 TCP study/TCP and its applications.tex
@@ -140,7 +140,7 @@ ip link set eth0 up@{\normalfont\normalsize{ or }}@ifconfig eth0 up
     \item Explain how the number of data segments that the sender transmits at once (before getting an ACK) changes after the connection is reestablished.\footnote{\href{http://www.ccs-labs.org/teaching/rn/animations/gbn_sr/}{TCP Window visualizer}}.
     \end{report}
     
-\part{Other exercises}
+\part{Other Exercises}
 \section{Fragmentation}
     While \lstinline[emph={your-host, remote-host}]{tcpdump src host your-host} is running, execute the following command, which is similar to the command we used to find out the maximum size of a UDP datagram in previous chapter (Chapter 5),
     \begin{lstlisting}[emph={n, remote-host}]
