--- a/template/template.fa.tex
+++ b/template/template.fa.tex
@@ -25,7 +25,7 @@
 \subsection{فونت‌ها}
 نمونه فونت‌های قابل استفاده:
 \begin{table}[h]
-	\label{tbl:farsi-fonts}
+	\label{tab:farsi-fonts}
 	\caption{جدول فونت های موجود}
 	\centering
 	\begin{tabular}{|l|l||R|R|}
