--- a/2 A single segment network/A single segment network.tex
+++ b/2 A single segment network/A single segment network.tex
@@ -55,7 +55,7 @@
                         \draw (h6) -- (s);
                         \draw (h7) -- (s);
                     \end{tikzpicture}
-                    \caption{A single segment network (Figure~1.3)}        
+                    \caption{A single segment network (Figure~1.3)}\label{fig:1.3}
                 \end{figure}
             \end{flushright}
         \end{minipage}
@@ -161,7 +161,7 @@ arp -d remote-host
     \end{report}
 
 \section{ARP Proxy}
-    The network topology for this proxy ARP exercise is shown in Fig. 2.9. The IP addresses and network masks for the hosts are also given in Fig. 2.9. Change the IP address and network mask of your host accordingly (see Section 2.3.2). Change the IP addresses and network masks of the \textit{Router4} interfaces according to Fig. 2.9.
+    The network topology for this proxy ARP exercise is shown in Fig. 2.9. The IP addresses and network masks for the hosts are also given in Fig. 2.9. Change the IP address and network mask of your host accordingly (see Section~2.3.2 of reference book). Change the IP addresses and network masks of the \textit{Router4} interfaces according to Fig. 2.9.
 
     \textbf{Note}\quad
     Network mask of the hosts in the 128.238.65.0 network is 255.255.0.0.
@@ -254,7 +254,7 @@ socket -i -u -n1 -w1000 host-in-64-0-subnet echo
     \end{report}
 
 
-\part{Exercise with ICMP and \texttt{ping}}
+\part{Exercise with ICMP and \texttt{ping}}\label{sec:icmp-ping}
 \section{ping ICMP}
     Use \lstinline[emph={remote-host}]{ping -sv remote-host} to test whether the remote host is reachable, while running:
     \\\lstinline[emph={your-host, remote-host}]{tcpdump -enx host your-host and remote-host}.
@@ -284,16 +284,16 @@ socket -i -u -n1 -w1000 remote-host 88888
     \begin{report}
     \item Can you see any traffic sent on the network? Why? Explain what happened from the \lstinline{ping} output.
 
-    \item List the different ICMP messages you captured in Exercises 8, 9, and 10 (if any). Give the values of the type and code fields.
+    \item List the different ICMP messages you captured in \nameref{sec:icmp-ping}. Give the values of the type and code fields.
     \end{report}
 
 \part{Exercises with IP address and subnet mask}
     In this section, we will observe what happens when the same IP address is assigned to two different hosts.
     We will also set an incorrect subnet mask for hosts and see what are the consequences.
-    For the next two exercises, we use only four host from single segment network (Fig 1.3).
+    For the next two exercises, we use only four host from single segment network (\hyperref[fig:1.3]{Figure~1.3}).
 
     \begin{table}[H]
-        \caption{Host IP addresses and network masks for \textit{11 Duplicate IP (Table~2.3.)}}
+        \caption{Host IP addresses and network masks for \nameref{sec:duplicate-ip} (Table~2.3)}\label{tab:2.3}
         \centering
         \begin{tabular}{ c c c c }
             \hline \hline
@@ -307,8 +307,8 @@ socket -i -u -n1 -w1000 remote-host 88888
             \end{tabular}
     \end{table}
 
-\section{Duplicate IP}
-    Change the IP address of your workstation as shown in Table 2.3.
+\section{Duplicate IP}\label{sec:duplicate-ip}
+    Change the IP address of your workstation as shown in \hyperref[tab:2.3]{Table~2.3}.
 
     Delete the entries for all hosts other than your own workstation from your workstation’s ARP table.
 
@@ -333,8 +333,8 @@ socket -i -u -n1 -w1000 remote-host 88888
     Answer the questions for the second and third cases.
     \end{report}
 
-\section{IP Subnets}
-    Change the host IP addresses and the subnet masks as shown in Table 2.4.
+\section{IP Subnets}\label{sec:ip-subnets}
+    Change the host IP addresses and the subnet masks as shown in \hyperref[tab:2.4]{Table~2.4}.
     Note that two hosts in each group (\textit{h0} and \textit{h3}) are assigned an incorrect subnet mask.
 
     Capture the packets with \lstinline{tcpdump -e} for the following cases.
@@ -355,7 +355,7 @@ socket -i -u -n1 -w1000 remote-host 88888
     To avoid confusion, only one machine in each group should generate traffic in each case.
     Clearly, this exercise has to be performed as a team.
     \begin{table}[H]
-        \caption{Host IP addresses and network masks for \textit{12 IP subnet (Table~2.4.)}}
+        \caption{Host IP addresses and network masks for \nameref{sec:ip-subnets} (Table~2.4)}\label{tab:2.4}
         \centering
         \begin{tabular}{ c c c }
             \hline \hline
