--- a/3 Bridges, LANs and the Cisco IOS/Bridges, LANs and the Cisco IOS.tex
+++ b/3 Bridges, LANs and the Cisco IOS/Bridges, LANs and the Cisco IOS.tex
@@ -76,7 +76,7 @@
     3.7, Table 3.2 and Table 3.3.
     Note that the default configuration of the hosts and the bridges are different from those in the tables.
     You need to change the IP addresses of the bridge interfaces,\footnote{As soon as you change the IP address of the bridge interface your host is connected to, the \lstinline{telnet} connection will be lost.
-    You need to again change the IP address of your workstation to be in the same subnet as the bridge interface. See Section 3.3.3.} as well as set the bridge group and enable the spanning tree algorithm (see the previous section on bridge configuration).
+    You need to again change the IP address of your workstation to be in the same subnet as the bridge interface. See Section~3.3.3  of reference book.} as well as set the bridge group and enable the spanning tree algorithm (see the previous section on bridge configuration).
     Do the following experiments.
 
 \section{Bridge Packet}
@@ -163,8 +163,8 @@ Ctrl+Z
 \part{Spanning Tree Exercises}
 \label{sec:spanning-tree}
     In this section, we will use Fig. 3.8 as our network topology.
-    You need to change the IP addresses of the bridge interfaces, as well as that of your workstation. Refer to Section      on how to configure a transparent bridge.
-    Also see Section 3.3.3 on how to handle a frozen telnet session after you change the bridge IP address.
+    You need to change the IP addresses of the bridge interfaces, as well as that of your workstation. Refer to Section~3.3.4 of reference book on how to configure a transparent bridge.
+    Also see Section~3.3.3 of reference book on how to handle a frozen telnet session after you change the bridge IP address.
 
     Upon being started, a transparent bridge learns the network topology by analyzing source addresses of incoming frames from all attached networks.
     The next exercise shows the process by which a transparent bridge builds its filtering database.
@@ -260,7 +260,7 @@ Ctrl+Z
     \item Submit the four different BPDUs (from four network sections) you saved.
     Identify the values of root ID, root path cost, bridge ID, and port ID for each BPDU.
 
-    \item Based upon the initial BPDUs saved in \hyperref[sec:spanning-tree]{Spanning tree exercise}, draw the spanning tree seen by the BPDUs. Identify the root ports and the root path cost (in hop counts) for each bridge.
+    \item Based upon the initial BPDUs saved in \nameref{sec:spanning-tree}, draw the spanning tree seen by the BPDUs. Identify the root ports and the root path cost (in hop counts) for each bridge.
     Identify the designated bridge and the designated port for each LAN segment.
     Identify the state of each bridge port (blocking or forwarding).
 
