--- a/7 Multicast and realtime service/Multicast and realtime service.tex
+++ b/7 Multicast and realtime service/Multicast and realtime service.tex
@@ -7,14 +7,13 @@
 
 \begin{document}
 \part{Simple Multicast Exercises}
-    For all the exercises in this section, the network topology is given in Fig.
-    \ref{fig:fig13}\footnote{1.3 in Reference}, where all the hosts are connected to a single network segment using their default IP addresses, i.e.\ from 128.238.66.100 to 128.238.66.107.
+    For all the exercises in this section, the network topology is given in \hyperref[fig:1.3]{Figure~1.3}, where all the hosts are connected to a single network segment using their default IP addresses, i.e.\ from 128.238.66.100 to 128.238.66.107.
     
     \begin{minipage}{0.48\textwidth}
         \begin{flushleft}
             \begin{table}[H]
                 \caption{The IP addresses of the hosts (Table~1.2)}
-                \label{tbl:1.2}
+                \label{tab:1.2}
                 \centering
                 \begin{tabular}{ c c c }
                     \hline \hline
@@ -58,7 +57,7 @@
                     \draw (h7) -- (s);
                 \end{tikzpicture}
                 \caption{A single segment network (Figure~1.3)}
-                \label{fig:fig13}
+                \label{fig:1.3}
             \end{figure}
         \end{flushright}
     \end{minipage}
@@ -156,12 +155,12 @@ netspyd 224.111.111.111 1500 1
     Execute the \lstinline{ping} command again.
     Also, examine the \lstinline{tcpdump} and the \lstinline{ping} outputs to see which hosts replied.
 
-\part{IGMP Exercises}
+\part{IGMP Exercises}\label{sec:igmp}
     In the following exercises, use four hosts and one router. The network topology is given in Fig. 7.13, and the corresponding host IP addresses and router IP addresses are given in Table 7.2 and Table 7.3, respectively.
 
     \begin{table}[H]
-        \caption{Hosts IP addresses for Fig. 7.13 (Table~7.2.)}
-        \label{tbl:7.2}
+        \caption{Hosts IP addresses for Fig. 7.13 (Table~7.2)}
+        \label{tab:7.2}
         \centering
         \begin{tabular}{ *3c }
             \hline \hline
@@ -176,8 +175,8 @@ netspyd 224.111.111.111 1500 1
     \end{table}
 
     \begin{table}[H]
-        \caption{Router IP addresses for Fig. 7.13 (Table~7.3.)}
-        \label{tbl:7.3}
+        \caption{Router IP addresses for Fig. 7.13 (Table~7.3)}
+        \label{tab:7.3}
         \centering
         \begin{tabular}{ *3c }
             \hline \hline
@@ -206,7 +205,7 @@ netspyd 224.111.111.111 1500 1
             \draw[thick] (4.5,0) -- (router);
             \draw[thick] (-4.5,0) -- (router);
         \end{tikzpicture}
-        \caption{The network topology for the exercises in Section 7.5. (Figure~7.13.)}
+        \caption{The network topology for \nameref{sec:igmp} (Figure~7.13)}
         \label{fig:7.13}
     \end{figure}
 
@@ -275,7 +274,7 @@ Router(interface)# ip igmp join-group 224.0.0.2
     \item Explain why the above command fails.
     \end{report}
 
-\part{Multicast Routing Exercises}
+\part{Multicast Routing Exercises}\label{sec:multicast-routing}
     For the rest of the exercises in this chapter, the network topology is given in Fig. 7.14. The exercises will be jointly performed by all the students. The IP addresses of the hosts and router interfaces are given in Fig. 7.14.
     \begin{figure}[H]
         \centering
@@ -342,7 +341,7 @@ Router(interface)# ip igmp join-group 224.0.0.2
             \draw[thick] (4-0.5,-1) -- +(1,0);
             \draw[thick] (7-1.5,-1) -- +(3,0);
         \end{tikzpicture}
-        \caption{The network topology for Multicast exercises (Figure~7.14)}
+        \caption{The network topology for \nameref{sec:multicast-routing} (Figure~7.14)}
         \label{fig:7.14}
     \end{figure}
 
