--- a/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
+++ b/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
@@ -97,7 +97,7 @@ User-Agent: HTTPTool/1.0
     \end{report}
 
 \part{DHCP Exercises}
-    For the exercises in this section, the network topology is given in Fig. 1.3 (\ref{fig:1.3}), where all the hosts are connected to a single network segment whitout their default IP addresses.
+    For the exercises in this section, the network topology is given in \hyperref[fig:1.3]{Figure~1.3}, where all the hosts are connected to a single network segment whitout their default IP addresses.
 
     \begin{center}
         \begin{minipage}{0.48\textwidth}
@@ -341,7 +341,7 @@ date -r file-name
             \draw[thick] (-2-0.5,1) -- +(2*2+1,0) node[pos=0.5,above] {Internet};
             \draw[thick] (-6+0.5,-1) -- +(6*2-1,0) node[pos=0,above,anchor=south west] {Private Network};
         \end{tikzpicture}
-        \caption{The network configuration for the NAT exercises (Figure~8.7.)}
+        \caption{The network configuration for the NAT exercises (Figure~8.7)}
         \label{fig:8.7}
     \end{figure}
 
@@ -477,7 +477,7 @@ config term
 \section{Socket Options}
     Execute \lstinline{man setsockopt} to display the various socket options and how to set them.
 
-    Examine the \lstinline{netspy} and \lstinline{netspyd} source code in Appendix C.2 to see how to create a multicast socket and how to set the TTL value for the packets.
+    Examine the \lstinline{netspy} and \lstinline{netspyd} source code in Appendix~C.2 of reference book to see how to create a multicast socket and how to set the TTL value for the packets.
     
     % \begin{report}
     % \item Explain the various options you could set on socket.
